Alignment fixes

--- a/src/components/ui/CardSwap.css
+++ b/src/components/ui/CardSwap.css
@@ -9,8 +9,8 @@
 .card-swap-inner {
   position: absolute;
   top: 50%;
-  left: 50%;
-  transform: translate(calc(-50% + 100px), calc(-50% + 60px));
+  left: calc(50% + 80px);
+  transform: translate(-50%, calc(-50% - 140px));
   transform-origin: center center;
 }
 
